--- a/partials/patient.component.html
+++ b/partials/patient.component.html
@@ -1,4 +1,4 @@
- //FIXME
+<link href="styles/layout.patient.css" rel="stylesheet" type="text/css" />
 <link href="assets/global/css/components-rounded.css" rel="stylesheet" id="style_components" type="text/css" />
 
 
