--- a/partials/patientappointments.component.html
+++ b/partials/patientappointments.component.html
@@ -1,1 +1,154 @@
-appointment
+ <!-- BEGIN PROFILE CONTENT -->
+                            <div class="profile-content">
+                                <div class="row">
+                                    <div class="col-md-12 col-sm-12">
+                            <div class="portlet light bordered">
+                                <div class="portlet-title">
+                                    <div class="caption caption-md">
+                                        <span class="caption-subject font-green bold uppercase">Mes médecins</span>
+                                    </div>
+                                    
+                                </div>
+                                <div class="portlet-body">
+                                        <table class="table table-hover table-light table-striped table-header-fixed" id="sample_1">
+                                        <thead>
+                                            <tr class="">
+                                                <th > </th>
+                                                <th >Médecins </th>
+                                                <th> Spécialité </th>
+                                                <th> Date </th>
+                                                <th> Etat </th>
+                                              
+                                            </tr>
+                                        </thead>
+                                        
+                                        <tbody>
+                                            <tr>
+                                                <td class="fit">
+                                                    <img class="user-pic" src="assets/onepage2/img/avatar/1.png"> 
+                                                </td>
+                                                <td> <a href="javascript:;" class="primary-link">DR. Thomas MOTTAT</a> </td>
+                                                <td> Généraliste </td>
+                                                <td> 28 aout 2016 - 09:00 </td>
+                                                <td class="text-bleu"> Confirmé </td>
+                                                
+                                            </tr>
+                                            <tr>
+                                                <td class="fit">
+                                                    <img class="user-pic" src="assets/onepage2/img/avatar/1.png"> 
+                                                </td>
+                                                <td> <a href="javascript:;" class="primary-link">DR. Thomas MOTTAT</a> </td>
+                                                <td> Généraliste </td>
+                                                <td> 28 aout 2016 - 09:00 </td>
+                                                <td class="text-bleu"> Confirmé </td>
+                                                
+                                            </tr>
+                                            <tr>
+                                                <td class="fit">
+                                                    <img class="user-pic" src="assets/onepage2/img/avatar/1.png"> 
+                                                </td>
+                                                <td> <a href="javascript:;" class="primary-link">DR. Thomas MOTTAT</a> </td>
+                                                <td> Généraliste </td>
+                                                <td> 28 aout 2016 - 09:00 </td>
+                                                <td class="text-bleu"> Confirmé </td>
+                                                
+                                            </tr>
+                                            <tr>
+                                                <td class="fit">
+                                                    <img class="user-pic" src="assets/onepage2/img/avatar/1.png"> 
+                                                </td>
+                                                <td> <a href="javascript:;" class="primary-link">DR. Thomas MOTTAT</a> </td>
+                                                <td> Généraliste </td>
+                                                <td> 28 aout 2016 - 09:00 </td>
+                                                <td class="text-bleu"> Confirmé </td>
+                                                
+                                            </tr>
+                                            <tr>
+                                                <td class="fit">
+                                                    <img class="user-pic" src="assets/onepage2/img/avatar/1.png"> 
+                                                </td>
+                                                <td> <a href="javascript:;" class="primary-link">DR. Thomas MOTTAT</a> </td>
+                                                <td> Généraliste </td>
+                                                <td> 28 aout 2016 - 09:00 </td>
+                                                <td class="text-bleu"> Confirmé </td>
+                                                
+                                            </tr>
+                                            <tr>
+                                                <td class="fit">
+                                                    <img class="user-pic" src="assets/onepage2/img/avatar/1.png"> 
+                                                </td>
+                                                <td> <a href="javascript:;" class="primary-link">DR. Thomas MOTTAT</a> </td>
+                                                <td> Généraliste </td>
+                                                <td> 28 aout 2016 - 09:00 </td>
+                                                <td class="text-bleu"> Confirmé </td>
+                                                
+                                            </tr>
+                                            <tr>
+                                                <td class="fit">
+                                                    <img class="user-pic" src="assets/onepage2/img/avatar/1.png"> 
+                                                </td>
+                                                <td> <a href="javascript:;" class="primary-link">DR. Thomas MOTTAT</a> </td>
+                                                <td> Généraliste </td>
+                                                <td> 28 aout 2016 - 09:00 </td>
+                                                <td class="text-bleu"> Confirmé </td>
+                                                
+                                            </tr>
+                                            <tr>
+                                                <td class="fit">
+                                                    <img class="user-pic" src="assets/onepage2/img/avatar/1.png"> 
+                                                </td>
+                                                <td> <a href="javascript:;" class="primary-link">DR. Thomas MOTTAT</a> </td>
+                                                <td> Généraliste </td>
+                                                <td> 28 aout 2016 - 09:00 </td>
+                                                <td class="text-bleu"> Confirmé </td>
+                                                
+                                            </tr>
+                                            <tr>
+                                                <td class="fit">
+                                                    <img class="user-pic" src="assets/onepage2/img/avatar/1.png"> 
+                                                </td>
+                                                <td> <a href="javascript:;" class="primary-link">DR. Thomas MOTTAT</a> </td>
+                                                <td> Généraliste </td>
+                                                <td> 28 aout 2016 - 09:00 </td>
+                                                <td class="text-bleu"> Confirmé </td>
+                                                
+                                            </tr>
+                                            <tr>
+                                                <td class="fit">
+                                                    <img class="user-pic" src="assets/onepage2/img/avatar/1.png"> 
+                                                </td>
+                                                <td> <a href="javascript:;" class="primary-link">DR. Thomas MOTTAT</a> </td>
+                                                <td> Généraliste </td>
+                                                <td> 28 aout 2016 - 09:00 </td>
+                                                <td class="text-bleu"> Confirmé </td>
+                                                
+                                            </tr>
+                                            <tr>
+                                                <td class="fit">
+                                                    <img class="user-pic" src="assets/onepage2/img/avatar/1.png"> 
+                                                </td>
+                                                <td> <a href="javascript:;" class="primary-link">DR. Thomas MOTTAT</a> </td>
+                                                <td> Généraliste </td>
+                                                <td> 28 aout 2016 - 09:00 </td>
+                                                <td class="text-bleu"> Confirmé </td>
+                                                
+                                            </tr>
+                                            <tr>
+                                                <td class="fit">
+                                                    <img class="user-pic" src="assets/onepage2/img/avatar/1.png"> 
+                                                </td>
+                                                <td> <a href="javascript:;" class="primary-link">DR. Thomas MOTTAT</a> </td>
+                                                <td> Généraliste </td>
+                                                <td> 28 aout 2016 - 09:00 </td>
+                                                <td class="text-bleu"> Confirmé </td>
+                                                
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    
+                                </div>
+                            </div>
+                        </div>
+                                </div>
+                            </div>
+                            <!-- END PROFILE CONTENT -->
