--- a/partials/patientdoctors.component.html
+++ b/partials/patientdoctors.component.html
@@ -1,1 +1,171 @@
-doctors
+  <!-- BEGIN PROFILE CONTENT -->
+                            <div class="profile-content">
+                                <div class="row">
+                                    <div class="col-md-12 col-sm-12">
+                            <div class="portlet light bordered">
+                                <div class="portlet-title">
+                                    <div class="caption caption-md">
+                                        <span class="caption-subject font-green bold uppercase">Mes médecins</span>
+                                    </div>
+                                    <div class="inputs">
+                                        <div class="portlet-input input-inline input-small ">
+                                            <div class="input-icon right">
+                                                <i class="icon-magnifier"></i>
+                                                <input type="text" class="form-control form-control-solid input-circle" placeholder="search..."> </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="portlet-body">
+                                        <div class="general-item-list">
+                                            <div class="item">
+                                                <div class="item-head">
+                                                    <div class="item-details">
+                                                        <img class="item-pic rounded" src="assets/onepage2/img/avatar/1.png">
+                                                        <a href="" class="item-name primary-link">Nick Larson</a>
+                                                        <span class="item-label">_Généraliste</span>
+                                                    </div>
+
+
+                                                </div>
+                                                <div class="item-body"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </div>
+                                                <div class="item-footer">
+                                                    <a href="javascript:;" class="btn btn-circle white btn-sm number"  > 3</a>
+                                                    <a href="javascript:;" class="btn btn-circle blue btn-sm" > Prendre rendez-vous</a>
+                                                </div>
+                                            </div>
+                                            <div class="item">
+                                                <div class="item-head">
+                                                    <div class="item-details">
+                                                        <img class="item-pic rounded" src="assets/onepage2/img/avatar/1.png">
+                                                        <a href="" class="item-name primary-link">Nick Larson</a>
+                                                        <span class="item-label">_Généraliste</span>
+                                                    </div>
+
+
+                                                </div>
+                                                <div class="item-body"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </div>
+                                                <div class="item-footer">
+                                                    <a href="javascript:;" class="btn btn-circle white btn-sm number"  > 3</a>
+                                                    <a href="javascript:;" class="btn btn-circle blue btn-sm" > Prendre rendez-vous</a>
+                                                </div>
+                                            </div>
+                                            <div class="item">
+                                                <div class="item-head">
+                                                    <div class="item-details">
+                                                        <img class="item-pic rounded" src="assets/onepage2/img/avatar/1.png">
+                                                        <a href="" class="item-name primary-link">Nick Larson</a>
+                                                        <span class="item-label">_Généraliste</span>
+                                                    </div>
+
+
+                                                </div>
+                                                <div class="item-body"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </div>
+                                                <div class="item-footer">
+                                                    <a href="javascript:;" class="btn btn-circle white btn-sm number"  > 3</a>
+                                                    <a href="javascript:;" class="btn btn-circle blue btn-sm" > Prendre rendez-vous</a>
+                                                </div>
+                                            </div>
+                                            <div class="item">
+                                                <div class="item-head">
+                                                    <div class="item-details">
+                                                        <img class="item-pic rounded" src="assets/onepage2/img/avatar/1.png">
+                                                        <a href="" class="item-name primary-link">Nick Larson</a>
+                                                        <span class="item-label">_Généraliste</span>
+                                                    </div>
+
+
+                                                </div>
+                                                <div class="item-body"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </div>
+                                                <div class="item-footer">
+                                                    <a href="javascript:;" class="btn btn-circle white btn-sm number"  > 3</a>
+                                                    <a href="javascript:;" class="btn btn-circle blue btn-sm" > Prendre rendez-vous</a>
+                                                </div>
+                                            </div>
+                                            <div class="item">
+                                                <div class="item-head">
+                                                    <div class="item-details">
+                                                        <img class="item-pic rounded" src="assets/onepage2/img/avatar/1.png">
+                                                        <a href="" class="item-name primary-link">Nick Larson</a>
+                                                        <span class="item-label">_Généraliste</span>
+                                                    </div>
+
+
+                                                </div>
+                                                <div class="item-body"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </div>
+                                                <div class="item-footer">
+                                                    <a href="javascript:;" class="btn btn-circle white btn-sm number"  > 3</a>
+                                                    <a href="javascript:;" class="btn btn-circle blue btn-sm" > Prendre rendez-vous</a>
+                                                </div>
+                                            </div>
+                                            <div class="item">
+                                                <div class="item-head">
+                                                    <div class="item-details">
+                                                        <img class="item-pic rounded" src="assets/onepage2/img/avatar/1.png">
+                                                        <a href="" class="item-name primary-link">Nick Larson</a>
+                                                        <span class="item-label">_Généraliste</span>
+                                                    </div>
+
+
+                                                </div>
+                                                <div class="item-body"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </div>
+                                                <div class="item-footer">
+                                                    <a href="javascript:;" class="btn btn-circle white btn-sm number"  > 3</a>
+                                                    <a href="javascript:;" class="btn btn-circle blue btn-sm" > Prendre rendez-vous</a>
+                                                </div>
+                                            </div>
+                                            <div class="item">
+                                                <div class="item-head">
+                                                    <div class="item-details">
+                                                        <img class="item-pic rounded" src="assets/onepage2/img/avatar/1.png">
+                                                        <a href="" class="item-name primary-link">Nick Larson</a>
+                                                        <span class="item-label">_Généraliste</span>
+                                                    </div>
+
+
+                                                </div>
+                                                <div class="item-body"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </div>
+                                                <div class="item-footer">
+                                                    <a href="javascript:;" class="btn btn-circle white btn-sm number"  > 3</a>
+                                                    <a href="javascript:;" class="btn btn-circle blue btn-sm" > Prendre rendez-vous</a>
+                                                </div>
+                                            </div>
+                                            <div class="item">
+                                                <div class="item-head">
+                                                    <div class="item-details">
+                                                        <img class="item-pic rounded" src="assets/onepage2/img/avatar/1.png">
+                                                        <a href="" class="item-name primary-link">Nick Larson</a>
+                                                        <span class="item-label">_Généraliste</span>
+                                                    </div>
+
+
+                                                </div>
+                                                <div class="item-body"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </div>
+                                                <div class="item-footer">
+                                                    <a href="javascript:;" class="btn btn-circle white btn-sm number"  > 3</a>
+                                                    <a href="javascript:;" class="btn btn-circle blue btn-sm" > Prendre rendez-vous</a>
+                                                </div>
+                                            </div>
+                                            <div class="item">
+                                                <div class="item-head">
+                                                    <div class="item-details">
+                                                        <img class="item-pic rounded" src="assets/onepage2/img/avatar/1.png">
+                                                        <a href="" class="item-name primary-link">Nick Larson</a>
+                                                        <span class="item-label">_Généraliste</span>
+                                                    </div>
+
+
+                                                </div>
+                                                <div class="item-body"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </div>
+                                                <div class="item-footer">
+                                                    <a href="javascript:;" class="btn btn-circle white btn-sm number"  > 3</a>
+                                                    <a href="javascript:;" class="btn btn-circle blue btn-sm" > Prendre rendez-vous</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    
+                                </div>
+                            </div>
+                        </div>
+                                </div>
+                            </div>
+                            <!-- END PROFILE CONTENT -->
