--- a/partials/profile.component.html
+++ b/partials/profile.component.html
@@ -1,3 +1,4 @@
+<link href="styles/layout.profile.css" rel="stylesheet" type="text/css" />
 <div class="modaldetails" >
             
             <div class="container">
