--- a/partials/search.component.html
+++ b/partials/search.component.html
@@ -1,3 +1,4 @@
+<link href="styles/layout.search.css" rel="stylesheet" type="text/css" />
 <section id="intro">
     <div class="container primary-section-container" ng-disabled="$ctrl.introSection != 'profile'">
 
